--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,13 @@ variables:
   IMAGE_NAME: nanajanashia/demo-app
   IMAGE_TAG: python-app-1.0
 
+stages:
+  - test
+  - build
+  - deploy
+
 run_tests:
+  stage: test
   image: python:3.9-buster
   before_script:
     - apt-get update && apt-get install -y make
@@ -10,6 +16,7 @@ run_tests:
     - make test
 
 build_image:
+  stage: build
   image: docker:20.10.16
   services:
     - docker:20.10.16-dind
@@ -20,3 +27,13 @@ build_image:
   script:
     - docker build -t $IMAGE_NAME:$IMAGE_TAG .
     - docker push $IMAGE_NAME:$IMAGE_TAG
+
+deploy:
+  stage: deploy
+  before_script:
+    - chmod 400 $SSH_KEY
+  script:
+    - ssh -o StrictHostKeyChecking=no -i $SSH_KEY root@161.35.223.117 "
+      docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASS" &&
+      docker ps -aq | xargs docker stop | xargs docker rm &&
+      docker run -d -p 5000:5000 $IMAGE_NAME:$IMAGE_TAG"
